proc-macros/tests/ui/incorrect/sub/sub_no_item.stderr
error: unexpected end of input, `#[subscription]` is missing `item` argument
 --> $DIR/sub_no_item.rs:6:2
  |
6 |     #[subscription(name = "sub")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
