proc-macros/tests/ui/incorrect/sub/sub_no_item.rs
use jsonrpsee::proc_macros::rpc;

// Missing mandatory `item` field.
#[rpc(client, server)]
pub trait NoSubItem {
	#[subscription(name = "sub")]
	async fn sub(&self) -> jsonrpsee::types::SubscriptionResult;
}

fn main() {}
